--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.1",
     "leaflet": "^1.9.4",
+    "mongoose": "^8.2.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0"
   }
 }
